# draft

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BOARD_CONFIG_INTEGRATION_FIX.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  LICENSE  Makefile  QUICK_START_GUIDE.md  README.md  SECURITY.md  add-scientific-calculator-operations-plan.md  build-a-rest-api-for-user-management-plan.md  cleanup_calculator.sh  cleanup_calculator_auto.sh  delete_board.py  docker-compose.dev.yaml  docker-compose.yaml  docker-compose.yml  draft.yaml  my-plan.md  nginx.conf  package-lock.json  package.json  record-demo-agent.mjs  record-demo-ticket.mjs  record-demo.mjs  run.py  smartkanban.yaml  start.sh  supervisord.conf  test_ticket_generation.py
backend/: .env.example  =0.23.0  CURL_EXAMPLES.md  ENV_SETUP.md  alembic.ini  canary_tests.sh  celerybeat-schedule-shm  celerybeat-schedule-wal  kanban.db-shm  kanban.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  run_with_logs.sh  test_actual_parse.py  test_agent_streaming.py  test_parse.py  test_streaming.py  test_subprocess_streaming.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_jobs_table.py  003_add_workspace_table.py  004_add_evidence_table.py  005_add_verification_commands.py  006_add_planner_lock_table.py  007_add_revision_review_tables.py  008_add_revision_idempotency_and_traceability.py  009_add_job_health_fields.py  010_add_review_comment_line_content.py  011_add_analysis_cache.py  012_add_boards_table.py  013_add_ticket_blocking.py  014_add_agent_sessions.py  015_add_ticket_sort_order.py  016_add_users_and_board_owner.py  017_add_agent_teams.py  03220f0b93ae_add_pr_fields_to_ticket.py  0c2d89fff3b1_seed_board_configs_from_yaml.py  3348e5cf54c1_add_merge_checklist_table.py  357c780ee445_add_goal_status.py  553340b7e26c_add_autonomy_fields_to_goal.py  774dc335c679_merge_migration_heads.py  7b307e847cbd_merge_heads.py  82ecd978cc70_add_missing_indexes.py  8ef5054dc280_add_normalized_log_entries.py  8f3e2bd8ea3b_merge_migration_heads.py  9d17f0698d3b_add_config_column_to_boards_table.py  add_agent_conversation_history.py  add_job_variant.py  add_repos_and_board_repos.py  add_session_id_to_jobs.py  add_sqlite_backend_tables.py  b10fb0b62240_add_diff_content_to_revisions.py
backend/app/: __init__.py  celery_app.py  data_dir.py  database.py  database_sync.py  dependencies.py  exceptions.py  main.py  redis_client.py  sqlite_kv.py  state_machine.py  task_backend.py  worker.py
backend/app/dependencies/: auth.py
backend/app/executors/: __init__.py  registry.py  spec.py
backend/app/middleware/: __init__.py  (+4 more)
backend/logs/: .gitkeep
backend/scripts/: seed_demo.py
backend/tests/: __init__.py  conftest.py  planner_service_test_data.py  test_auth.py  test_autonomy_service.py  test_cleanup_service_safety.py  test_middleware.py  test_planner_json_parsing.py  test_planner_providers.py  test_revision_invariants.py  test_sqlite_kv.py  test_sqlite_worker.py  test_task_dispatch.py  test_ticket_validation.py  test_udar_agent.py  test_webhook_service.py
sdk/: README.md  pyproject.toml
(+532 files in other folders)
