[project]
name = "telem-backend"
version = "0.1.0"
description = "Draft Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (standard FastAPI pattern for Depends())
    "B904",   # raise from in except (too noisy to fix everywhere)
    "E402",   # module level import not at top (conditional imports)
    "E741",   # ambiguous variable name
    "B026",   # star-arg unpacking after keyword
    "F821",   # undefined name (false positive in dynamic imports)
    "E722",   # bare except in test files
    "B023",   # loop variable binding in test files
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
